--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
+        <div id="infodiv">
+            <a href="instructions.html" id="info" target="blank">Instructions to Play and more about RGB color scheme</a>
+        </div>
     </div>
     <script src="cg.js"></script>
 </body>
