--- a/instructions.html
+++ b/instructions.html
@@ -17,6 +17,26 @@
         <p>
             The three numbers represent the intensity of the colors Red, Green and Blue respectively with 0 being the least intensity and 255 being the most.
         </p>
+        <p>
+            The colors follow additive property.When two colors are added in same intensity:
+            <ul>
+                <li>Green+Blue = Cyan</li>
+                <li>Red+Blue = Magenta</li>
+                <li>Red+Green = Yellow</li>
+            </ul>
+            <strong>When the 3 colors are mixed in maximum intensity, White color is formed.</strong>
+        </p>
+        <p>
+            A Few Examples:
+            <ul>
+                <li>RGB(255, 0, 0) is Red</li>
+                <li>RGB(0, 0, 0) is Black</li>
+                <li>RGB(255, 255, 255) is White</li>
+                <li>RGB(200,50,0) is Reddish shade with a very low Greenish effect.</li>
+            </ul>
+        </p>
+        <img id="rgbphoto" src="rgb-color-wheel-lg.jpg">
+        <br>
         <a href="javascript:window.close()" id="close">Return to Game</a>
     </div>
     <script src="cg.js"></script>
