--- a/instructions.html
+++ b/instructions.html
@@ -10,7 +10,16 @@
 <body>
     <h1>The Great <br><span id="rgb">RGB(32, 54, 243)</span><br> Color Game</h1>
     <div class="instructions" id="instructions">
-        <h4>INSTRUCTIONS</h4>
+        <h3><u>INSTRUCTIONS</u></h3>
+        <p>
+            You are given with a random RGB code in the title. Your objective is to match the RGB code with correct color.<br>
+            There are 2 modes:
+            <ul>
+                <li>EASY-3 Color Tiles</li>
+                <li>HARD-6 Color Tiles</li>
+            </ul>
+        </p>
+        <h4><u>RGB Color Model</u></h4>
         <p>
             The RGB color model is an additive color model in which Red, Green and Blue light are added together in various ways to reproduce a broad array of colors. 
         </p>        
@@ -35,9 +44,9 @@
                 <li>RGB(200,50,0) is Reddish shade with a very low Greenish effect.</li>
             </ul>
         </p>
-        <img id="rgbphoto" src="rgb-color-wheel-lg.jpg">
-        <br>
         <a href="javascript:window.close()" id="close">Return to Game</a>
+        <br>
+        <img id="rgbphoto" src="rgb-color-wheel-lg.jpg">
     </div>
     <script src="cg.js"></script>
 </body>
